test/syntax-errors/tests/server.js
'use strict';

const {readFile} = require('fs');
module.exports = readFile;
